--- a/codes/esPIC/src/Makefile
+++ b/codes/esPIC/src/Makefile
@@ -28,7 +28,7 @@
 
 # Default compiler is Intel MPI compiler
 
-COMPILER := mpicc
+COMPILER := mpicxx # Fulton change from mpicc
 UBUNTU   := ubuntu
 
 # Change if on ubuntu
@@ -40,8 +40,9 @@ endif
 # -----------------------------------------------------
 # Make esPIC
 # -----------------------------------------------------
-
-
 esPIC: esPIC.cpp esPIC.h gauss_seidel.h plotter.h mpiInfo.h particles.h particle_plotter.h LaplacianOnGrid.h
-	$(COMPILER) esPIC.cpp -g -o esPIC -std=c++11 -fopenmp
+	$(COMPILER) esPIC.cpp -g -O2 -std=c++11 -qopenmp -o esPIC
+# Fulton change from 
+# esPIC: esPIC.cpp esPIC.h gauss_seidel.h plotter.h mpiInfo.h particles.h particle_plotter.h LaplacianOnGrid.h
+# $(COMPILER) esPIC.cpp -g -o esPIC -std=c++11 -fopenmp
 
